[package]
name = "axumsqlxsessions"
version = "0.1.0"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
description = "Library to Provide a Postgresql Session management layer. You must also include Tower_cookies in order to use this Library."
edition = "2021"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/axumsqlxsessions"
keywords = ["Axum", "Tower", "SQLx", "Session"]

[dependencies]
axum = "0.3"
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["clock", "serde", "std"]}
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1.51"
tracing = "0.1"
thiserror = "1.0.29"
http-body = "0.4.3"
uuid = { version = "0.8", features = ["v4", "serde"] }
rand = "0.8"
futures-util = "0.3"
http = "0.2"
parking_lot = "0.11"
pin-project-lite = "0.2"
tower-http = { version = "0.1", features = ["full"] }
tower-layer = "0.3"
tower-service = "0.3"
tower-cookies = "0.2"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "all-types"] }
anyhow = "1.0"

